# Suika_AI_Challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
DO_NOT_MODIFY/: README_DO_NOT_MODIFY.md  __init__.py  game_config.yaml
DO_NOT_MODIFY/evaluation/: __init__.py  run_eval.py  seed_bank.json
DO_NOT_MODIFY/suika_core/: __init__.py  async_vector_env.py  config_loader.py  env_gym.py  fruit_catalog.py  game.py  merge_system.py  mp_vector_env.py  physics_world.py  render_full_pygame.py  render_solid.py  replay_recorder.py  rng.py  rules.py  scoring.py  sprite_loader.py  state_snapshot.py  vector_env.py  video_recorder.py
assets/sprites/: .gitkeep
contestants/: __init__.py
contestants/baseline_lidar/: README.md  __init__.py  agent.py  benchmark.py  replay.json
contestants/baseline_lidar/replays/: baseline_lidar_20260119_110350_s42.json  baseline_lidar_20260119_110409_s42.json  baseline_lidar_20260119_122845_s42.json  baseline_lidar_20260119_133450_s42.json  baseline_lidar_20260119_133948_s42.json  baseline_lidar_20260119_134225_s42.json  baseline_lidar_20260119_134701_s42.json  baseline_lidar_20260119_134817_s42.json  baseline_lidar_20260119_140544_s42.json
contestants/team_template/: API_REFERENCE.md  README.md  __init__.py  agent.py
tests/: __init__.py  test_env_api.py  test_merge_rules.py  test_observation_api.py  test_settle_logic.py  test_spawn_queue.py
tools/: __init__.py  benchmark_speed.py  play_human.py  replay_viewer.py  view_grid.py
